    - New: [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/pl-go][𝕻𝔩 - Go]] PDF that describes the commands available for the Go
     programming language.
  - New: *Gleam*, an Erlang BEAM language
    - New: added support for the Gleam programming language, activated when
      the *pel-use-gleam* user-option is turned on (set to *t*).  The support
      is very basic.
    - New:  [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/pl-gleam][𝕻𝔩 - Gleam]] PDF.
  - Update: *Python*
    - Modified: binding to rainbow-delimiters-mode to ``<f12> M-r`` like it is
      for other programming languages.
  - New: *REXX*:
    - Add support for REXX programming language via a [[https://github.com/pierre-rouleau/rexx-mode][my forked rexx-mode
      GitHub project]] which provides:
      - [[https://github.com/pierre-rouleau/rexx-mode/commit/546d3589f0d967d01405c2a5f380bc1782672f69][support for imenu/speedbar for REXX procedure]],
      - [[https://github.com/pierre-rouleau/rexx-mode/commit/546d3589f0d967d01405c2a5f380bc1782672f69][navigation to the next/previous REXX procedure]],
      - customization control for indentation management variables.
    - New: *NetRexx*:
      - Add support for NetRexx programming language via
        [[https://github.com/pierre-rouleau/netrexx-mode][my forked netrexx-mode GitHub project]].
  - Update: *Rust*:
    - Modified: ⚠️  *Customization affecting change*: customization setting, *pel-use-rust*,
      no longer automatically activates cargo and racer for Emacs.  These now
      have to be enabled by their own user-option variable.  The user-option
      variables controlling Rust support are now the following:
      - *pel-use-rust*: must be turned on (set to t) to activate Rust support.
      - *pel-use-rust-mode*: activates the use of rust-mode.
      - *pel-use-rustic*: activates the use of rustic.  Both rust-mode and
        rustic may be enabled if needed.